# leptos-assembly

./: .gitignore  Cargo.toml  README.md  bindings.mjs  biome.json  build.rs  clippy.toml  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.json  typos.toml  uno.config.ts  vite.config.ts
.cargo/: config.example-ubuntu-mold.toml  config.example.toml  config.toml
.github/actions/cache/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: review.yaml  review.yml
apps/client/: Cargo.toml  bindings.ts  build.rs  lib.rs  sw.ts  uno.config.ts  vite.config.ts
apps/client/app/: Cargo.toml  lib.rs  the_confirms.rs
apps/client/app/the_toasts/: toast.rs
apps/client/components/: Cargo.toml  base_animated_for.rs  base_button.rs  base_input.rs  lib.rs  the_logo.rs
apps/client/components/base/: modal.rs
apps/client/composables/: Cargo.toml  confirm.rs  i18n.rs  lib.rs  logger.rs  overlay.rs  toast.rs
apps/client/composables/throttle/: use_switch.rs
apps/client/i18n/locales/: la.yaml
apps/client/js/: bindings.ts
apps/client/layouts/: Cargo.toml  blank.rs  default.rs  lib.rs
apps/client/layouts/home/: mod.rs  the_leptos_tag_info.rs
apps/client/macros/: js.rs
apps/client/macros/proc/: Cargo.toml
apps/client/pages/: Cargo.toml  hi_name.rs  lib.rs  not_found.rs
apps/client/pages/404/: Cargo.toml  lib.rs
apps/client/pages/about/: Cargo.toml  lib.rs  mod.rs
apps/client/pages/about/components/: feature_brick.rs
apps/client/pages/hi/: Cargo.toml  lib.rs
apps/client/pages/hi/[name]/: Cargo.toml  lib.rs
apps/client/pages/hi/index/: Cargo.toml  lib.rs
apps/client/pages/home/: Cargo.toml  lib.rs
apps/client/stores/: Cargo.toml  lib.rs  names.rs
apps/client/utils/: Cargo.toml  future.rs
apps/core/: Cargo.toml  main.rs
apps/main/: Cargo.toml  main.rs
apps/pwa/: main.rs
apps/server/: Cargo.toml  lib.rs
e2e/: navigation.test.ts  playwright.config.ts  pwa.test.ts  tsconfig.json
e2e/tests/: navigation.test.ts  pwa.test.ts
locales/: en.json  en.yaml  la.json  la.yaml
src/: env.rs  lib.rs  main.rs  prelude.rs
src/app/: mod.rs  prelude.rs  router.rs
src/app/components/base/: animated_for.rs  link.rs  mod.rs
src/app/components/layouts/home/: the_leptos_tag_info.rs
src/app/components/layouts/shared/: the_footer.rs
src/app/components/pages/: hi.rs  home.rs  mod.rs  not_found.rs
src/app/components/pages/about/: feature_brick.rs  mod.rs
src/app/components/root/: the_confirms.rs
src/app/components/root/the_toasts/: mod.rs
src/app/components/utility/: animated_for.rs  mod.rs
src/app/components/utility/animated_for/: animator.rs  mod.rs  puppeteer.rs  untracked_classes.rs
src/app/composables/: callback.rs  confirm.rs  future.rs  global_context.rs  i18n.rs  mod.rs  nprogress.rs  panic_handler.rs  toast.rs
src/app/composables/throttle/: mod.rs
src/app/stores/: names.rs
src/macros/: cfg.rs  i18n.rs
src/macros/proc/: Cargo.toml  app_item_fn_wrapper.rs
src/utils/: animation.rs  future.rs  logger.rs  mod.rs
