[workspace]
resolver = "2"
members = [
  "apps/core",
  "apps/pwa",
  "packages/client",
  "packages/client/src/app",
  "packages/client/src/components",
  "packages/client/src/hooks",
  "packages/client/src/env",
  "packages/client/src/i18n",
  "packages/client/src/layouts",
  "packages/client/src/macros",
  "packages/client/src/macros/proc",
  "packages/client/src/pages",
  "packages/client/src/router",
  "packages/client/src/stores",
  "packages/client/src/utils",
  "packages/common",
  "packages/common/vendor",
  "packages/common/macros",
  "packages/common/macros/proc",
  "packages/common/utils",
  "packages/server",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.73"

[workspace.dependencies]
client.path = "packages/client"
client_components.path = "packages/client/src/components"
client_hooks.path = "packages/client/src/hooks"
client_env.path = "packages/client/src/env"
client_i18n.path = "packages/client/src/i18n"
client_macros.path = "packages/client/src/macros"
client_router.path = "packages/client/src/router"
client_stores.path = "packages/client/src/stores"
client_utils.path = "packages/client/src/utils"
common.path = "packages/common"
common_macros.path = "packages/common/macros"
common_utils.path = "packages/common/utils"
common_vendor.path = "packages/common/vendor"
server.path = "packages/server"
cfg-if = "1.0.0"
leptos = { version = "0.6.5", features = ["nightly"] }
leptos_i18n = { version = "0.3.0-rc", features = [
  "nightly",
  "serde",
  "cookie",
  "interpolate_display",
  "yaml_files",
], default-features = false }
leptos_router = { version = "0.6.5", features = ["nightly"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
wasm-bindgen = "0.2.91"
# proc macros
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
# dev
insta = "1.34.0"
pretty_assertions = "1.4.0"
wasm-bindgen-test = "0.3.41"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.client-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.client-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.server-release]
inherits = "release"

[[workspace.metadata.leptos]]
name = "core"
bin-package = "core"
lib-package = "client"
site-root = "target/client"
site-pkg-dir = "hydrate"
output-name = "app"
assets-dir = "target/client-prebuild"
site-addr = "127.0.0.1:3333"
reload-port = 3334
bin-features = []
bin-default-features = false
bin-profile-dev = "server-dev"
bin-profile-release = "server-release"
lib-features = ["hydrate", "vite-prebuild"]
lib-default-features = false
lib-profile-dev = "client-dev"
lib-profile-release = "client-release"
watch-additional-files = ["apps/core", "packages"]

[[workspace.metadata.leptos]]
name = "core-pwa"
bin-package = "pwa"
lib-package = "client"
site-root = "target/client-prebuild/pwa"
site-pkg-dir = ""
output-name = "app"
bin-features = []
bin-default-features = false
bin-profile-dev = "server-dev"
bin-profile-release = "server-release"
lib-features = ["csr", "pwa"]
lib-default-features = false
lib-profile-dev = "client-dev"
lib-profile-release = "client-release"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# warn
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
ref_patterns = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unseparated_literal_suffix = "warn"
use_debug = "warn"
use_self = "warn"
verbose_file_reads = "warn"
# allow
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
unsafe_derive_deserialize = "allow"
