[package]
name = "core"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "core"
path = "main.rs"

[dependencies]
client = { path = "../../packages/client", features = ["ssr"] }
common = { workspace = true, features = ["logger", "ssr"] }
leptos.workspace = true
log.workspace = true
axum.workspace = true
leptos_axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
