[package]
name = "core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "core"
path = "main.rs"

[dependencies]
client = { workspace = true, features = ["ssr"] }
server.workspace = true
tokio.workspace = true

[features]
pwa = ["client/pwa"]
