[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
exports = { workspace = true, features = ["server"] }
leptos.workspace = true
reqwest = { version = "0.11.22", features = ["json"] }
serde.workspace = true
