[package]
name = "client_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
client_components.workspace = true
client_composables.workspace = true
client_env.workspace = true
client_i18n.workspace = true
client_layouts.path = "../layouts"
client_macros.workspace = true
client_page_about.path = "../pages/about"
client_page_hi_index.path = "../pages/hi/index"
client_page_hi_name.path = "../pages/hi/[name]"
client_page_home.path = "../pages/home"
client_page_404.path = "../pages/404"
client_router.workspace = true
client_utils.workspace = true
exports = { workspace = true, features = ["client"] }
macros.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true

[features]
pwa = []
csr = []
ssr = []

[package.metadata.cargo-all-features]
skip_feature_sets = [["csr", "ssr"]]
