[package]
name = "client_page_about"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
client_components.workspace = true
client_composables.workspace = true
client_i18n.workspace = true
client_utils.workspace = true
exports = { workspace = true, features = ["client"] }
leptos.workspace = true
rand.workspace = true
