[package]
name = "client_page_hi_index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
client_i18n.workspace = true
client_router.workspace = true
client_stores.workspace = true
exports = { workspace = true, features = ["client"] }
leptos.workspace = true
leptos_i18n.workspace = true
leptos_router.workspace = true
